# board-game

./: README.md  Sketch.fzz  UI.md  flake.nix  planning.ods  rust-toolchain.toml
code/: Cargo.toml
code/.cargo/: config.toml
code/src/: dev.rs  fascist.rs  lib.rs  liberal.rs  main.rs
code/src/lib/: ble.rs  ble_2.rs  config.rs  debouncer.rs  draw_writer.rs  embedded_storage_async_wrapper.rs  game_state.rs  lazy_shared_spi.rs  lazy_shared_spi_2.rs  liberal_renderer.rs  map_storage.rs  mod.rs  on_drop.rs  postcard_value.rs  render.rs  rotary_encoder.rs  rotary_input.rs  scale_rgb.rs  scan_and_choose.rs  scanning_event_handler.rs  storage.rs
common/: Cargo.toml
common/src/: lib.rs
game_pure/: Cargo.toml
game_pure/src/: lib.rs  ui.rs
mcp23017_emulator/: Cargo.toml  README.md
mcp23017_emulator/src/: gpio_pin.rs  lib.rs  main.rs  mcp23017.rs  reset_pin.rs
mcp23017_emulator_stm32/: Cargo.toml
mcp23017_emulator_stm32/src/: main.rs  stm32_gpio_pin.rs
stm32_code/: Cargo.toml
stm32_code/.cargo/: config.toml
stm32_code/src/: debouncer.rs  main.rs
wasm_code/: Cargo.toml
wasm_code/src/: lib.rs
wasm_playground/: Cargo.toml
wasm_playground/src/: main.rs
