[package]
name = "secret_hitler"
version = "0.1.0"
edition = "2024"
publish =  false

[[bin]]
name = "secret_hitler_liberal"
path = "src/liberal.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "secret_hitler_fascist"
path = "src/fascist.rs"
test = false
doctest = false
bench = false

[lib]
name = "lib"
path = "src/lib/mod.rs"
test = false
doctest = false
bench = false

[dependencies]
defmt = "1.0.1"
embassy-executor = "0.9.1"
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = "0.4.0"
esp-hal = { version = "1.0.0", features = ["defmt", "unstable"] }
esp-hal-smartled = { version = "0.17.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy"] }
smart-leds = "0.4.0"
ssd1306 = { version = "0.10.0", features = ["async"] }

[features]
default = ["esp32c3"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-rtos/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-hal-smartled/esp32c3",
]
