[package]
name = "secret_hitler"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "secret_hitler_liberal"
path = "src/liberal.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "secret_hitler_fascist"
path = "src/fascist.rs"
test = false
doctest = false
bench = false

[lib]
name = "lib"
path = "src/lib/mod.rs"
test = false
doctest = false
bench = false

[dependencies]
bt-hci = { version = "0.6.0", features = ["defmt"] }
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = "0.9.1"
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt"] }
esp-hal = { version = "1.0.0", features = ["defmt", "unstable"] }
esp-hal-smartled = { version = "0.17.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash"] }
esp-radio = { version = "0.17.0", features = ["ble", "defmt", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
] }
esp-storage = { version = "0.8.1", features = ["defmt"] }
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
postcard = "1.1.3"
sequential-storage = { version = "7.0.1", features = ["defmt"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
smart-leds = "0.4.0"
ssd1306 = { version = "0.10.0", features = ["async"] }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
strum_macros = "0.27.2"
trouble-host = { version = "0.5.1", features = ["defmt", "scan", "security"] }
zerocopy = { version = "0.8.33", features = ["derive"] }

[features]
default = ["esp32c3"]
esp32c3 = [
    "esp-hal/esp32c3",
    "esp-rtos/esp32c3",
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-hal-smartled/esp32c3",
    "esp-radio/esp32c3",
    "esp-alloc/esp32c3",
    "esp-storage/esp32c3",
]
