[package]
name = "common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
defmt = "1.0.1"
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
mfrc522 = { version = "0.8.0", path = "../../mfrc522", features = ["defmt", "serde"] }
postcard = "1.1.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_arrays = "0.2.0"
smart-leds = { version = "0.4.0", features = ["serde"] }
