[package]
name = "game_pure"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = "0.9.2"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
trouble-host = "0.5.1"

[features]
defmt = ["dep:defmt"]
std = []
