[package]
name = "stm32_code"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "stm32_code"
test = false
bench = false

[dependencies]
common = { version = "0.1.0", path = "../common" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "stm32f103c8",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
postcard = { version = "1.1.3", features = ["use-defmt"] }
smart-leds = "0.4.0"
ws2812-async = { git = "https://github.com/kalkyl/ws2812-async", version = "0.3.0" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
